# Monty.jl

./: .JuliaFormatter.toml  .editorconfig  .gitignore  .pre-commit-config.yaml  MONTY_UI_GUIDE.md  Project.toml  README.md  index.html  package-lock.json  package.json
.github/workflows/: benchmarks.yml  checks.yml  documentation.yml  tests.yml
benchmark/: Project.toml  runbenchmarks.jl
cases/: Manifest.toml  Project.toml  README.md  pyproject.toml
cases/demo/: demo_module.py  demo_simulations.jl
docs/: Project.toml  make.jl
docs/src/: bigsim.md  containers.md  efficiency.md  index.md  mixing.md  reference.md  simple.md  tutorial.md
monty-local-setup/: README-LOCAL.md
monty-local-setup/assets/: index-DvcJnAaz.js
monty-local-setup/server/: index.js
monty-local-setup/src/: App.jsx  Monty.jl  index.css  leaching_models.jl  mixing_model.jl  simulating.jl  stencils.jl
monty-local-setup/src/services/: api.js
scripts/: Manifest.toml  Project.toml  core_sensitivity.jl
server/: index.js  package.json
src/: App.jsx  cdr_potential.jl  checks.jl  gaussian.jl  jitters.jl  measuring.jl  sampling.jl
src/components/: ResultsVisualization.jsx  SimulationForm.jsx
test/: runtests.jl
